[package]
name = "spirit_dollars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
proxie = { version = "0.1.1", features = ["enable_tokio"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serenity = { version = "0.12.1", features = ["framework"] }
tokio = { version = "1.37.0", features = ["full"] }
